--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <script type="text/javascript" src="Hammer.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Abril+Fatface">
+              <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
      <!Part for Sidemenu:About us,Login,Signup,Our team,Social media links>
